Bug 30952: Add spacing between itemtypes and subtype limits
Issue #43

--- a/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
+++ b/koha-tmpl/intranet-tmpl/prog/css/src/staff-global.scss
@@ -2546,6 +2546,10 @@ td.bundle {
     }
 }
 
+#advsearches {
+    margin-bottom: 1em;
+}
+
 #circ_circulation_issue {
     position: relative;
 }
